# PixForge

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 50c0a9409b72_init.py
backend/: .env.example  .gitignore  README.md
backend/alembic/versions/: 3d380290bd73_delete_user_number_field.py
backend/src/: config.py  logger.py
backend/src/auth/: config.py  enums.py  router.py  schemas.py
backend/src/database/: database.py
backend/src/database/query/: orm.py
frontend/: Dockerfile  Dockerfile.dev  components.json  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ImageUploadWrapper.tsx  header.tsx  images_upload.tsx  tool-settings.tsx
frontend/components/kokonutui/: toolbar.tsx
frontend/public/components/ui/: images_upload.tsx
src/: config.py  lifespan.py
src/auth/: column_types.py  config.py  models.py  router.py  schemas.py  security.py
src/database/: database.py
src/database/query/: orm.py
