[project]
name = "a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "fastapi>=0.118.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
